form update validate

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -165,7 +165,7 @@
     <script src="content/plugins/moment/moment.min.js"></script>
     <script src="content/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- Tempusdominus Bootstrap 4 -->
-    <script src="content/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- <script src="content/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script> -->
     <!-- Summernote -->
     <script src="content/plugins/summernote/summernote-bs4.min.js"></script>
     <!-- overlayScrollbars -->
